# jo

./: LICENSE  README.md  compiler.cabal  jo-lang.cabal
client/: Main.hs
examples/programs/: fizz-buzz.jo  hello-world.jo  iterators.jo  json-file-it.jo  simple.jo
examples/stdlib/data/: tree.jo
examples/syntax/: function-invokations.jo  lambdas.jo  let-usage.jo
source/client/: Main.hs
source/lib/JoScript/: Job.hs
source/lib/JoScript/Config/: ArgParsing.hs
source/lib/JoScript/Data/: Debug.hs  Error.hs  Lexer.hs  Position.hs  Syntax.hs
source/lib/JoScript/Pass/: Block.hs  Lexer.hs  Parse.hs
source/lib/JoScript/Util/: Debug.hs  Json.hs  Text.hs
source/test/: Spec.hs
source/test/JoScript/Pass/: LexerTest.hs  ParseTest.hs
source/test/JoScript/Util/: JsonTest.hs  TextTest.hs
src/JoScript/: Job.hs
src/JoScript/Config/: ArgParsing.hs
src/JoScript/Data/: Block.hs  BlockPass.hs  Config.hs  Error.hs  LexPass.hs  Lexer.hs  LexerPass.hs  Position.hs  Syntax.hs
src/JoScript/Job/: Build.hs
src/JoScript/Pass/: Block.hs  Debug.hs  Lexer.hs  Parse.hs
src/JoScript/Text/: BlockPass.hs  LexerPass.hs  ParsePass.hs
src/JoScript/Util/: ByteString.hs  Conduit.hs  Debug.hs  Json.hs  Strings.hs  Text.hs
test/: Spec.hs
test/JoScript/Pass/: ParseTest.hs
test/JoScript/Util/: StringsTest.hs
