name:                compiler
version:             0.0.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Angus Thomsen
maintainer:          aksthomsen@gmail.com
copyright:           2016 Angus Thomsen
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JoScript.Data.Position,
                       JoScript.Data.Error,
                       JoScript.Data.BlockPass,
                       JoScript.Data.LexPass,
                       JoScript.Data.Config,

                       JoScript.Config.ArgParsing,

                       JoScript.Job,
                       JoScript.Job.Build,

                       JoScript.Text.BlockPass

  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       lens,
                       aeson,
                       text,
                       directory,
                       bytestring,
                       transformers,
                       containers,
                       conduit,
                       optparse-applicative,
                       conduit-combinators
  default-language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude


executable client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, compiler
  default-language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude

test-suite compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , compiler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/compiler
