name:                compiler
version:             0.0.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/compiler#readme
license:             MIT
license-file:        LICENSE
author:              Angus Thomsen
maintainer:          aksthomsen@gmail.com
copyright:           2016 Angus Thomsen
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag debug
  description: for locating errors likely caused by back practise
  default:     False

flag production
  description: for preparing the source for release
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:     JoScript.Data.Position
                     , JoScript.Util.Debug
                     , JoScript.Data.Error
                     , JoScript.Data.Syntax
                     , JoScript.Data.Block
                     , JoScript.Data.Lexer
                     , JoScript.Data.Config

                     , JoScript.Config.ArgParsing

                     , JoScript.Job
                     , JoScript.Job.Build

                     , JoScript.Pass.Lexer
                     , JoScript.Pass.Parse
                     , JoScript.Pass.Block
                     , JoScript.Util.Text
                     , JoScript.Util.Strings
                     , JoScript.Util.Json
                     , JoScript.Util.Conduit

  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       lens,
                       aeson,
                       text,
                       directory,
                       bytestring,
                       protolude,
                       transformers,
                       containers,
                       conduit,
                       aeson-pretty,
                       ansi-wl-pprint,
                       template-haskell,
                       unordered-containers,
                       optparse-applicative,
                       conduit-combinators


  default-language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude
                     , DuplicateRecordFields
                     , RecordWildCards
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , ViewPatterns
                     , StandaloneDeriving
                     , PartialTypeSignatures
                     , MultiWayIf
                     , PatternGuards
                     , NamedFieldPuns
  if flag(production)
    ghc-options: -Werror, -Wall
  if flag(debug)
    ghc-options: -Werror
               , -Wincomplete-patterns
               , -Wname-shadowing


executable client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, compiler, protolude
  default-language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude

test-suite compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       JoScript.Util.TextTest
                     , JoScript.Util.StringsTest
                     , JoScript.Util.JsonTest
  build-depends:       base
                     , compiler
                     , HUnit
                     , aeson
                     , protolude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/compiler
